Modificaçao na Documentaçao das rotas do Swagger
