# swagger.yaml
@@ -63,7 +63,7 @@ paths:
         409:
           description: Unauthorized. User already exists.
   
-  /api/products:
+  /:
     get:
       summary: Get a list of products
       responses:
@@ -76,7 +76,7 @@ paths:
         404:
           description: Not Found. No products available.
 
-  /api/products/{product_id}:
+  /{product_id}:
     get:
       summary: Get product details by ID
       parameters:
@@ -93,7 +93,7 @@ paths:
         404:
           description: Not Found. Product not available.
           
-  /api/products/add:
+  /add:
     post:
       summary: Add a new product
       parameters:
@@ -108,7 +108,7 @@ paths:
         400:
           description: Failed to add the product
 
-  /api/products/update/{product_id}:
+  /update/{product_id}:
     put:
       summary: Update a product by ID
       parameters:
@@ -130,7 +130,7 @@ paths:
         400:
           description: Failed to update the product
 
-  /api/products/delete/{product_id}:
+  /delete/{product_id}:
     delete:
       summary: Delete a product by ID
       parameters:
@@ -145,7 +145,7 @@ paths:
         404:
           description: Not Found. Product not available
 
-  /api/cart/add/{product_id}:
+  /cart/add/{product_id}:
     post:
       summary: Add item to the cart
       parameters:
@@ -160,7 +160,7 @@ paths:
         400:
           description: Failed to add item to the cart
 
-  /api/cart/remove/{product_id}:
+  /cart/remove/{product_id}:
     delete:
       summary: Remove item from the cart
       parameters:
@@ -175,7 +175,7 @@ paths:
         400:
           description: Failed to remove item from the cart
 
-  /api/cart:
+  /cart:
     get:
       summary: View the user's cart
       responses:
@@ -188,7 +188,7 @@ paths:
         401:
           description: Unauthorized. User not logged in
 
-  /api/cart/checkout:
+  /cart/checkout:
     post:
       summary: Checkout and clear the cart
       responses:
